Fixes some bugs with class path and running testclasses